force-app/main/default/objects/Exhibition_Arrangement__c/Exhibition_Arrangement__c.object-meta.xml
<CustomObject>
    <label>Exhibition Arrangement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exhibition Arrangements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>