force-app/main/default/objects/Exhibition_Arrangement__c/fields/Additional_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Additional_Requirement__c</fullName>
    <label>Additional Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>