force-app/main/default/objects/Exhibition_Arrangement__c/fields/ArrangementLink__c.field-meta.xml
<CustomField>
    <fullName>ArrangementLink__c</fullName>
    <formula>LEFT($Api.Enterprise_Server_URL_100, FIND( &apos;e.com&apos;, $Api.Enterprise_Server_URL_100)) + 
&apos;-sites.com/exhibitionArrangementWithout?id=&apos; + 
CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrangement Link</label>
    <type>Text</type>
</CustomField>