force-app/main/default/objects/Exhibition_Arrangement__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <label>Arrival Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>