force-app/main/default/objects/Exhibition_Arrangement__c/fields/Booked_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Booked_Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booked Hotel</label>
    <referenceTo>Exhibition_Hotel__c</referenceTo>
    <relationshipLabel>Exhibition Arrangements (Booked Hotel)</relationshipLabel>
    <relationshipName>Exhibition_Arrangements1</relationshipName>
    <type>Lookup</type>
</CustomField>