force-app/main/default/objects/Exhibition_Arrangement__c/fields/Booked_Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Booked_Hotel_Name__c</fullName>
    <formula>Booked_Hotel__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked Hotel Name</label>
    <type>Text</type>
</CustomField>