force-app/main/default/objects/Exhibition_Arrangement__c/fields/Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type__c</fullName>
    <formula>Internal_Registration__r.Certificate_Type_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Type</label>
    <type>Text</type>
</CustomField>