force-app/main/default/objects/Exhibition_Arrangement__c/fields/Creator_Email__c.field-meta.xml
<CustomField>
    <fullName>Creator_Email__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Email</label>
    <type>Text</type>
</CustomField>