force-app/main/default/objects/Exhibition_Arrangement__c/fields/Designated_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Designated_Hotel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Designated Hotel</label>
    <type>Checkbox</type>
</CustomField>