force-app/main/default/objects/Exhibition_Arrangement__c/fields/Exhibition_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotel Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Exhibition_Hotel__c.Exhibition_Management__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Exhibition_Management__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Exhibition_Hotel__c</referenceTo>
    <relationshipLabel>Exhibition Arrangements</relationshipLabel>
    <relationshipName>Exhibition_Arrangements</relationshipName>
    <type>Lookup</type>
</CustomField>