force-app/main/default/objects/Exhibition_Arrangement__c/fields/Exhibition_Id_Invisible__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Id_Invisible__c</fullName>
    <formula>Internal_Registration__r.Exhibition_Id__r.Id</formula>
    <label>Exhibition Id Invisible</label>
    <type>Text</type>
</CustomField>