force-app/main/default/objects/Exhibition_Arrangement__c/fields/Exhibition_Management__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Management</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>Exhibition Arrangements</relationshipLabel>
    <relationshipName>Exhibition_Arrangements</relationshipName>
    <type>Lookup</type>
</CustomField>