force-app/main/default/objects/Exhibition_Arrangement__c/fields/ExhibitionDate__c.field-meta.xml
<CustomField>
    <fullName>ExhibitionDate__c</fullName>
    <formula>TEXT( Exhibition_Management__r.StartDate__c) + &apos; ~ &apos; + TEXT( Exhibition_Management__r.EndDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition Date</label>
    <type>Text</type>
</CustomField>