force-app/main/default/objects/Exhibition_Arrangement__c/fields/Hotel_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hotel_End_Date__c</fullName>
    <label>Hotel Check-out Date</label>
    <type>Date</type>
</CustomField>