force-app/main/default/objects/Exhibition_Arrangement__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <formula>Exhibition_Hotel__r.Name</formula>
    <label>Hotel Name Invisible</label>
    <type>Text</type>
</CustomField>