force-app/main/default/objects/Exhibition_Arrangement__c/fields/Hotel_Name_CN__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name_CN__c</fullName>
    <formula>Booked_Hotel__r.Hotel_Name_CN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Name CN</label>
    <type>Text</type>
</CustomField>