force-app/main/default/objects/Exhibition_Arrangement__c/fields/Hotel_Name_Provided_EN__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name_Provided_EN__c</fullName>
    <formula>The_exhibition_offers_hotels__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Name Provided EN</label>
    <type>Text</type>
</CustomField>