force-app/main/default/objects/Exhibition_Arrangement__c/fields/Hotel_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Start_Date__c</fullName>
    <label>Hotel Check-in Date</label>
    <type>Date</type>
</CustomField>