force-app/main/default/objects/Exhibition_Arrangement__c/fields/Inbound_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Flight_No__c</fullName>
    <label>Inbound Flight No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>