force-app/main/default/objects/Exhibition_Arrangement__c/fields/Internal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Internal_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Registration</label>
    <referenceTo>Internal_Registration__c</referenceTo>
    <relationshipName>Exhibition_Vehicle_Arrangements</relationshipName>
    <type>Lookup</type>
</CustomField>