force-app/main/default/objects/Exhibition_Arrangement__c/fields/Is_Not_Flight__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Flight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Flight</label>
    <type>Checkbox</type>
</CustomField>