force-app/main/default/objects/Exhibition_Arrangement__c/fields/Is_Not_Need_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Need_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Need Vehicle</label>
    <type>Checkbox</type>
</CustomField>