force-app/main/default/objects/Exhibition_Arrangement__c/fields/Is_Not_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Vehicle__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Not Vehicle</label>
    <type>Checkbox</type>
</CustomField>