force-app/main/default/objects/Exhibition_Arrangement__c/fields/Luggage__c.field-meta.xml
<CustomField>
    <fullName>Luggage__c</fullName>
    <description>行李件数</description>
    <label>Luggage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>