force-app/main/default/objects/Exhibition_Arrangement__c/fields/Need_hotel__c.field-meta.xml
<CustomField>
    <fullName>Need_hotel__c</fullName>
    <label>Need hotel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>