force-app/main/default/objects/Exhibition_Arrangement__c/fields/Pick_Off_Point__c.field-meta.xml
<CustomField>
    <fullName>Pick_Off_Point__c</fullName>
    <description>取值逻辑为 Vehicle Booking 表中刷数（含义为下车地即统计的为来程PickUp数据）</description>
    <label>Pick Off Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>