force-app/main/default/objects/Exhibition_Arrangement__c/fields/Place_Of_Departure__c.field-meta.xml
<CustomField>
    <fullName>Place_Of_Departure__c</fullName>
    <label>Place Of Departure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>