force-app/main/default/objects/Exhibition_Arrangement__c/fields/PresenceDate__c.field-meta.xml
<CustomField>
    <fullName>PresenceDate__c</fullName>
    <label>Presence Date</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01-01</fullName>
            </value>
            <value>
                <fullName>01-02</fullName>
            </value>
            <value>
                <fullName>01-03</fullName>
            </value>
            <value>
                <fullName>01-04</fullName>
            </value>
            <value>
                <fullName>01-05</fullName>
            </value>
            <value>
                <fullName>01-06</fullName>
            </value>
            <value>
                <fullName>01-07</fullName>
            </value>
            <value>
                <fullName>01-08</fullName>
            </value>
            <value>
                <fullName>01-09</fullName>
            </value>
            <value>
                <fullName>01-10</fullName>
            </value>
            <value>
                <fullName>01-11</fullName>
            </value>
            <value>
                <fullName>01-12</fullName>
            </value>
            <value>
                <fullName>01-13</fullName>
            </value>
            <value>
                <fullName>01-14</fullName>
            </value>
            <value>
                <fullName>01-15</fullName>
            </value>
            <value>
                <fullName>01-16</fullName>
            </value>
            <value>
                <fullName>01-17</fullName>
            </value>
            <value>
                <fullName>01-18</fullName>
            </value>
            <value>
                <fullName>01-19</fullName>
            </value>
            <value>
                <fullName>01-20</fullName>
            </value>
            <value>
                <fullName>01-21</fullName>
            </value>
            <value>
                <fullName>01-22</fullName>
            </value>
            <value>
                <fullName>01-23</fullName>
            </value>
            <value>
                <fullName>01-24</fullName>
            </value>
            <value>
                <fullName>01-25</fullName>
            </value>
            <value>
                <fullName>01-26</fullName>
            </value>
            <value>
                <fullName>01-27</fullName>
            </value>
            <value>
                <fullName>01-28</fullName>
            </value>
            <value>
                <fullName>01-29</fullName>
            </value>
            <value>
                <fullName>01-30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>