force-app/main/default/objects/Exhibition_Arrangement__c/fields/PresenceInformation__c.field-meta.xml
<CustomField>
    <fullName>PresenceInformation__c</fullName>
    <label>Presence Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>