force-app/main/default/objects/Exhibition_Arrangement__c/fields/Return_Flight_No__c.field-meta.xml
<CustomField>
    <fullName>Return_Flight_No__c</fullName>
    <label>Return Flight No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>