force-app/main/default/objects/Exhibition_Arrangement__c/fields/Return_Flight_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Return_Flight_Order_No__c</fullName>
    <label>Return Flight Order No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>