force-app/main/default/objects/Exhibition_Arrangement__c/fields/Return_Luggage__c.field-meta.xml
<CustomField>
    <fullName>Return_Luggage__c</fullName>
    <label>Return Luggage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>