force-app/main/default/objects/Exhibition_Arrangement__c/fields/Return_Need_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Return_Need_Vehicle__c</fullName>
    <label>Return Need Vehicle</label>
    <length>10</length>
    <type>Text</type>
</CustomField>