force-app/main/default/objects/Exhibition_Arrangement__c/fields/Return_Time__c.field-meta.xml
<CustomField>
    <fullName>Return_Time__c</fullName>
    <label>Return Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>