force-app/main/default/objects/Exhibition_Arrangement__c/fields/Return_Vehicle_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Return_Vehicle_Run_Time__c</fullName>
    <description>去程用车事件</description>
    <label>Return Vehicle Run Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>