force-app/main/default/objects/Exhibition_Arrangement__c/fields/Roommate__c.field-meta.xml
<CustomField>
    <fullName>Roommate__c</fullName>
    <label>Roommate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>