force-app/main/default/objects/Exhibition_Arrangement__c/fields/SelfHotelOrder__c.field-meta.xml
<CustomField>
    <fullName>SelfHotelOrder__c</fullName>
    <label>SelfHotelOrder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>