force-app/main/default/objects/Exhibition_Arrangement__c/fields/The_exhibition_offers_hotels__c.field-meta.xml
<CustomField>
    <fullName>The_exhibition_offers_hotels__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>展会提供的入住酒店</description>
    <label>The exhibition offers hotels</label>
    <referenceTo>Exhibition_Hotel__c</referenceTo>
    <relationshipLabel>Exhibition Arrangements (The exhibition offers hotels)</relationshipLabel>
    <relationshipName>Exhibition_Arrangements2</relationshipName>
    <type>Lookup</type>
</CustomField>