force-app/main/default/objects/Exhibition_Arrangement__c/fields/UserPhone__c.field-meta.xml
<CustomField>
    <fullName>UserPhone__c</fullName>
    <formula>Internal_Registration__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Phone</label>
    <type>Text</type>
</CustomField>