force-app/main/default/objects/Exhibition_Arrangement__c/fields/Vehicle_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Run_Time__c</fullName>
    <description>用车时间（即航班出发时+规则Buff时间）</description>
    <label>Vehicle Run Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>