force-app/main/default/objects/Exhibition_Arrangement__c/validationRules/Exhibition_Hotel_Name_Designated_Hotel.validationRule-meta.xml
<ValidationRule>
    <fullName>Exhibition_Hotel_Name_Designated_Hotel</fullName>
    <active>true</active>
    <description>如果同时选择了酒店并且勾选checkbox会报错</description>
    <errorConditionFormula>AND( Designated_Hotel__c ,
 !ISBLANK( Exhibition_Hotel__c) 
)</errorConditionFormula>
    <errorDisplayField>Designated_Hotel__c</errorDisplayField>
    <errorMessage>You can only fill in one of the two fields: Designated Hotel and Exhibition Hotel.</errorMessage>
</ValidationRule>