force-app/main/default/objects/Exhibition_Arrangement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Internal_Registration__c</columns>
    <columns>Inbound_Flight_No__c</columns>
    <columns>Place_Of_Departure__c</columns>
    <columns>Arrival_Date__c</columns>
    <columns>Return_Flight_No__c</columns>
    <columns>Exhibition_Hotel__c</columns>
    <columns>Return_Date__c</columns>
    <columns>Booked_Hotel__c</columns>
    <columns>Exhibition_Management__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exhibition_Management__c</field>
        <operation>contains</operation>
        <value>136</value>
    </filters>
    <label>All</label>
</ListView>